SOLID-418: solid: fix flash of invisible text

--- a/_lib/solid-base/_base.scss
+++ b/_lib/solid-base/_base.scss
@@ -30,7 +30,6 @@ td {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 
@@ -56,7 +55,6 @@ ul,
 li {
   margin: 0;
   padding: 0;
-  font: inherit;
 }
 
 
